# adventofcode

./: .gitignore  README.md  base.py  main.py  pyproject.toml  replit.nix
2022/: _template.py  day_1.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_2.py  day_3.py  day_4.py  day_5.py  day_6.py  day_7.py  day_8.py  day_9.py
_2022/: day_1.py  day_11.py  day_14.py  day_15.py  day_17.py  day_18.py  day_20.py  day_21.py  day_22.py  day_23.py  day_24.py  day_25.py  day_3.py  day_4.py  day_5.py  day_7.py  day_8.py  day_9.py
fastaoc/: structure.py
fastaoc/utils/: __init__.py  docparser.py
fastaof/: __init__.py  executor.py  models.py  puzzle.py  structure.py
fastaof/utils/: docparser.py
resolutions/: day_1.py  day_2.py  day_3.py
testcases/: day_1.yaml  day_2.yaml
tests/: test_algebra.py
utils/: algebra.py  aliases.py  coordinates.py  point.py  vector.py
utils/grid/: __init__.py  base.py  grid.py
utils/grid/implementations/: base.py
